fix: add COORDENADOR and DIRETOR to TipoUsuario and wire CustomSuccessHandler